[gd_scene load_steps=28 format=3 uid="uid://v0v5kxar45ku"]

[ext_resource type="Script" path="res://scenes/home/home.gd" id="1_2oc5q"]
[ext_resource type="Texture2D" uid="uid://cu51a58ffm2go" path="res://sprites/yuka_portrait.png" id="1_v6hc1"]
[ext_resource type="Texture2D" uid="uid://cxrl3e01a3uqe" path="res://sprites/mikan_portrait.png" id="2_glifc"]
[ext_resource type="PackedScene" uid="uid://dinr1sxkrrqf0" path="res://scenes/help_page/help_page.tscn" id="2_ucxoj"]
[ext_resource type="Texture2D" uid="uid://brs2tw8ntjnuy" path="res://sprites/kotori_portrait.png" id="3_aso05"]
[ext_resource type="Texture2D" uid="uid://dii28virsxohc" path="res://sprites/boss_portrait.png" id="4_t0yoe"]
[ext_resource type="LabelSettings" uid="uid://dbqdiyf3xbom2" path="res://resources/label_settings/title_label_settings.tres" id="5_dt7c8"]
[ext_resource type="Texture2D" uid="uid://bhnwxl1d5inoq" path="res://sprites/angry_slime.png" id="6_rso0t"]
[ext_resource type="Texture2D" uid="uid://dxg1vfxxduy3n" path="res://sprites/familiar.png" id="7_mdyd5"]
[ext_resource type="LabelSettings" uid="uid://bj2sjhi7lhamq" path="res://resources/label_settings/home_message_label_settings.tres" id="8_me5jx"]
[ext_resource type="Texture2D" uid="uid://cpslwug003tey" path="res://sprites/home_start_button.png" id="9_pv80w"]
[ext_resource type="Texture2D" uid="uid://buy6mlaqwnj8j" path="res://sprites/home_help_button.png" id="10_1u5my"]
[ext_resource type="Texture2D" uid="uid://ds0ecxr2mruty" path="res://sprites/home_quit_button.png" id="11_yxski"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kb32h"]
atlas = ExtResource("6_rso0t")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba76t"]
atlas = ExtResource("7_mdyd5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ca8p"]
atlas = ExtResource("9_pv80w")
region = Rect2(0, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ux8s"]
atlas = ExtResource("9_pv80w")
region = Rect2(90, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjkdd"]
atlas = ExtResource("9_pv80w")
region = Rect2(180, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4neb"]
atlas = ExtResource("9_pv80w")
region = Rect2(270, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqo1o"]
atlas = ExtResource("10_1u5my")
region = Rect2(0, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko6gt"]
atlas = ExtResource("10_1u5my")
region = Rect2(90, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2fxf"]
atlas = ExtResource("10_1u5my")
region = Rect2(180, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_skkpk"]
atlas = ExtResource("10_1u5my")
region = Rect2(270, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_44moy"]
atlas = ExtResource("11_yxski")
region = Rect2(0, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_06u21"]
atlas = ExtResource("11_yxski")
region = Rect2(90, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_rni1i"]
atlas = ExtResource("11_yxski")
region = Rect2(180, 0, 90, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpx2d"]
atlas = ExtResource("11_yxski")
region = Rect2(270, 0, 90, 34)

[node name="Home" type="Node2D"]
script = ExtResource("1_2oc5q")
help_scene = ExtResource("2_ucxoj")

[node name="Canvas" type="Control" parent="."]
custom_minimum_size = Vector2(480, 270)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="Canvas"]
custom_minimum_size = Vector2(480, 270)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.203922, 0.247059, 1)

[node name="Title" type="Label" parent="Canvas"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.0
offset_top = 28.0
offset_right = 99.0
offset_bottom = 66.0
grow_horizontal = 2
text = "AUTO SHOUJO"
label_settings = ExtResource("5_dt7c8")

[node name="Images" type="Control" parent="Canvas"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Yuka" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 66.0
offset_top = 138.0
offset_right = 98.0
offset_bottom = 170.0
texture = ExtResource("1_v6hc1")

[node name="Mikan" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 109.0
offset_top = 180.0
offset_right = 141.0
offset_bottom = 212.0
texture = ExtResource("2_glifc")

[node name="Kotori" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 49.0
offset_top = 204.0
offset_right = 81.0
offset_bottom = 236.0
texture = ExtResource("3_aso05")

[node name="Satone" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 371.0
offset_top = 146.0
offset_right = 403.0
offset_bottom = 178.0
texture = ExtResource("4_t0yoe")
flip_h = true

[node name="Slime0" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 356.0
offset_top = 182.0
offset_right = 372.0
offset_bottom = 198.0
texture = SubResource("AtlasTexture_kb32h")
flip_h = true

[node name="Slime1" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 425.0
offset_top = 158.0
offset_right = 441.0
offset_bottom = 174.0
texture = SubResource("AtlasTexture_kb32h")
flip_h = true

[node name="Slime2" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 338.0
offset_top = 142.0
offset_right = 354.0
offset_bottom = 158.0
texture = SubResource("AtlasTexture_kb32h")
flip_h = true

[node name="Slime3" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 335.0
offset_top = 211.0
offset_right = 351.0
offset_bottom = 227.0
texture = SubResource("AtlasTexture_kb32h")
flip_h = true

[node name="Slime4" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 396.0
offset_top = 199.0
offset_right = 412.0
offset_bottom = 215.0
texture = SubResource("AtlasTexture_kb32h")
flip_h = true

[node name="Familiar" type="TextureRect" parent="Canvas/Images"]
layout_mode = 0
offset_left = 31.0
offset_top = 171.0
offset_right = 47.0
offset_bottom = 187.0
texture = SubResource("AtlasTexture_ba76t")

[node name="FailMessage" type="Label" parent="Canvas"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 83.0
offset_right = 66.0
offset_bottom = 109.0
grow_horizontal = 2
text = "You Failed!"
label_settings = ExtResource("8_me5jx")
horizontal_alignment = 1

[node name="WinMessage" type="Label" parent="Canvas"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 83.0
offset_right = 66.0
offset_bottom = 109.0
grow_horizontal = 2
text = "You Win!"
label_settings = ExtResource("8_me5jx")
horizontal_alignment = 1

[node name="CreditMessage" type="Label" parent="Canvas"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 83.0
offset_right = 66.0
offset_bottom = 109.0
grow_horizontal = 2
text = "Created by v3ck"
label_settings = ExtResource("8_me5jx")
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="Canvas"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -139.0
offset_right = 45.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_3ca8p")
texture_pressed = SubResource("AtlasTexture_3ux8s")
texture_hover = SubResource("AtlasTexture_yjkdd")
texture_disabled = SubResource("AtlasTexture_x4neb")

[node name="HelpButton" type="TextureButton" parent="Canvas"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -55.0
offset_right = 45.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_pqo1o")
texture_pressed = SubResource("AtlasTexture_ko6gt")
texture_hover = SubResource("AtlasTexture_b2fxf")
texture_disabled = SubResource("AtlasTexture_skkpk")

[node name="QuitButton" type="TextureButton" parent="Canvas"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -97.0
offset_right = 45.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_44moy")
texture_pressed = SubResource("AtlasTexture_06u21")
texture_hover = SubResource("AtlasTexture_rni1i")
texture_disabled = SubResource("AtlasTexture_mpx2d")

[connection signal="button_up" from="Canvas/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="Canvas/HelpButton" to="." method="_on_help_button_button_up"]
[connection signal="button_up" from="Canvas/QuitButton" to="." method="_on_quit_button_button_up"]
